# ai-software-factory

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  package.json  pyproject.toml  requirements.txt
.autofix/: context.txt
.github/workflows/: 01-intake.yml  01-intake.yml.bak  01-requirement-and-intake.yml  02-design-and-tests.yml  02-design-and-tests.yml.bak  02a-design-options.yml  02b-finalize-design.yml  03-build.yml  04-verify.yml  05-auto-fix.yml  06-release.yml
apps/backend/: __init__.py  agent_runner.py  agent_runner_openai.py  auth_store.py  main.py  models.py  services.py  store.py
apps/scripts/: init-postgres.sh  postgres-smoke.sh  restart-dev.sh
apps/web/: README.md  index.html  package-lock.json  package.json  vite.config.ts
docs/: coding-rules.md  definition-of-done.md  engineering-standards.md  feat-0001-run.md  feat-0002-run.md  feat-0003-run.md  member-system.md  release-playbook.md
docs/auto-fix/: FEAT-0001.auto-fix-report.md
docs/release/: FEAT-0001.v0.1.0-feat-0001.release-report.md
docs/verify/: FEAT-0001.verify-report.md
scripts/: generate_spec.py  generate_test_manifest.py  run_local_autofix.sh  run_local_ci.sh  run_local_intake.sh  setup_codex.sh  validate_spec.py
specs/architecture/: FEAT-0001.md  FEAT-0002.md  FEAT-0003.md  FEAT-0100.md
specs/brainstorm/: FEAT-0001.md  FEAT-0002.md  FEAT-0003.md
specs/decision/: FEAT-0001.md  FEAT-0002.md  FEAT-0003.md  FEAT-0100.md
specs/prd/: FEAT-0001.md  (+3 more)
tests/: conftest.py  factories.py  pytest.ini  requirements.txt  setup.cfg  test_basic.py  test_main.py  test_runner.py
(+87 files in other folders)
