[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-software-factory"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.12",
    "uvicorn==0.34.0",
    "python-multipart==0.0.20",
    "pydantic==2.12.5",
    "psycopg[binary]==3.2.10",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.5",
    "httpx==0.28.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: run slower smoke-style checks",
    "integration: run integration coverage for end-to-end API flows",
    "unit: run isolated unit tests",
    "db: run persistence-related tests",
    "anyio: run async tests through the anyio plugin",
]
